# FastAPIDemo

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8fb6e4b815e6_v1.py
app/: database.py  models.py  routers.py  schemas.py
app/configs/: keycloak_config.py
app/db/: database.py
app/models/: entity.py  user.py
app/routers/: base_router.py  user_router.py
app/schemas/: entity_schema.py  user_schema.py
app/services/: base_service.py  user_service.py
configs/: auth_config.py  jwt_config.py
db/: database.py
models/: entity.py  user.py
routers/: auth_router.py  base_router.py  user_router.py
schemas/: auth_schema.py  entity_schema.py  user_schema.py
services/: base_service.py  user_service.py
